Make sure arrow icons are visible on left nav and settings since they have different background colors

--- a/src/global.scss
+++ b/src/global.scss
@@ -109,3 +109,13 @@ body {
   color: #767676;
   margin-bottom: 0;
 }
+
+.navigation-icon path {
+  @include media-breakpoint-down(lg) {
+    fill: black;
+  }
+
+  @include media-breakpoint-up(lg) {
+    fill: white;
+  }
+}
